# ParseFlags

./: CMakeLists.txt  README
demo/: CMakeLists.txt  my_parsers.hpp  test_main.c  test_main.cpp
include/c/: parse_flags.h
include/cpp/: parse_flags.hpp
src/: CMakeLists.txt
src/c/: parse_flags.c  parse_flags.h
src/cpp/: parse_flags.cpp  parse_flags.hpp
